--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -3,5 +3,5 @@ WORKDIR /app
 COPY * /app/
 RUN pip install -r requirements.txt
 EXPOSE 5000
-ENV FLASK_APP=simple_flask_app.py
+ENV FLASK_APP=flask_app.py
 CMD ["flask", "run", "--host", "0.0.0.0"]
